--- a/c/2017/CMakeLists.txt
+++ b/c/2017/CMakeLists.txt
@@ -6,8 +6,11 @@ if(NOT CMAKE_BUILD_TYPE)
 endif()
 set(CMAKE_C_STANDARD 23)
 set(CMAKE_C_STANDARD_REQUIRED ON)
-set(CMAKE_C_FLAGS "-march=native -fsanitize=address -Wall -Wextra -Wpedantic -Werror -pipe")
+set(CMAKE_C_FLAGS "-march=native -Wall -Wextra -Wpedantic -Werror -pipe -fsanitize=address")
 
 project(aoc2017 LANGUAGES C)
 
-add_executable(1 1.c utils.c)
+add_library(utils OBJECT utils.c)
+
+add_executable(1 1.c $<TARGET_OBJECTS:utils>)
+add_executable(2 2.c $<TARGET_OBJECTS:utils>)
